package com.example.flappybird.Interfaces

import com.example.flappybird.Views.PipeType

interface GameState {
    fun getPipeType(): PipeType
}
