package com.example.flappybird.Interfaces

import android.graphics.Canvas
import android.graphics.Paint

interface Updatable{
    fun update(t: Int?)
}