package com.example.flappybird

import com.example.flappybird.Interfaces.GameState

abstract class State: GameState {
}